<resources>
    <string name="app_name">EnvelUp!</string>
    <string name="startup_button_login">Log in</string>
    <string name="startup_button_signup">Sing up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_age">Edad</string>
    <string name="hint_roll">Soy un...</string>
    <string name="hint_roll1">Voluntario</string>
    <string name="hint_Roll2">Paciente</string>
    <string name="hint_roll3">Medico</string>
    <string name="play">Jugar</string>
    <string name="confirm">Confirmar</string>
    <string name="scores">Puntuación</string>
</resources>